# ChangeLog for perl-core/Module-Pluggable
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Pluggable/ChangeLog,v 1.19 2013/01/27 11:20:29 tove Exp $

*Module-Pluggable-4.600.0 (27 Jan 2013)

  27 Jan 2013; Torsten Veller <tove@gentoo.org>
  +Module-Pluggable-4.600.0.ebuild:
  Version bump

*Module-Pluggable-4.500.0 (17 Nov 2012)

  17 Nov 2012; Torsten Veller <tove@gentoo.org>
  +Module-Pluggable-4.500.0.ebuild:
  Version bump

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org>
  Module-Pluggable-4.300.0.ebuild:
  Marked ~ppc-aix, bug #432288

*Module-Pluggable-4.300.0 (22 Aug 2012)

  22 Aug 2012; Torsten Veller <tove@gentoo.org>
  +Module-Pluggable-4.300.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  06 May 2012; Raúl Porcel <armin76@gentoo.org>
  Module-Pluggable-3.900.0.ebuild, Module-Pluggable-4.0.0.ebuild:
  Add ~arm/~s390/~sh

*Module-Pluggable-4.0.0 (02 May 2012)

  02 May 2012; Torsten Veller <tove@gentoo.org> +Module-Pluggable-4.0.0.ebuild:
  Version bump

*Module-Pluggable-3.900.0 (20 May 2011)

  20 May 2011; Torsten Veller <tove@gentoo.org> -Module-Pluggable-3.9.ebuild,
  +Module-Pluggable-3.900.0.ebuild:
  Change version scheme

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  Module-Pluggable-3.9.ebuild:
  Marked ~x86-solaris, bug #296509

  16 Dec 2009; Jonathan Callen <abcd@gentoo.org>
  Module-Pluggable-3.9.ebuild:
  QA: Transfer prefix keywords

  28 Apr 2009; Torsten Veller <tove@gentoo.org>
  -Module-Pluggable-3.6.ebuild, -Module-Pluggable-3.8.ebuild:
  Cleanup

  25 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  Module-Pluggable-3.9.ebuild:
  ia64 stable wrt #266103

  19 Apr 2009; Tiago Cunha <tcunha@gentoo.org> Module-Pluggable-3.9.ebuild:
  stable sparc, bug 266103

  19 Apr 2009; Markus Meier <maekke@gentoo.org> Module-Pluggable-3.9:
  amd64/x86 stable, bug #266103
