@@ -5,13 +5,23 @@ EBUILD perl-Module-Pluggable-3.900.0-r1.ebuild 652 SHA256 6ea08b0854cbb5f0959563
 EBUILD perl-Module-Pluggable-4.0.0-r1.ebuild 550 SHA256 af3f94e59aeb5a03fad8c5798103e493f97a86bb543851743b7e19b9c49c5c39 SHA512 ca2e757b44bc0be23bde41d937dfca28edd94ed9bb8aa2290f6379a360d5b5b65cad25e057988c790be6a68ca2a140949475a97863852c92ce14a01152349649 WHIRLPOOL 9b4581d16f57de471144b95208a1ea5ca37ff0cf09c0f4efce9378718812ab5a68430de38a0b840ee86ad96108c83f5912f6dfc973520d0c2a0f9664c5b63b0e
 EBUILD perl-Module-Pluggable-4.300.0.ebuild 533 SHA256 a87eb6531ed0662909bf436752b4dc5959ea99d9e32370660fccc0cbee9cb4d6 SHA512 a1d4d5ebf6c04966a378aabf9b798d7f58a5a0da5199edd2cdb06060e43337892d5275cceb59836d5ff98eee6526e56511c70a942685245e2a2a5a6f8a02951b WHIRLPOOL 52fcf9d9acaf6e48da8a78766b032b680fb5c614f428c83e8cefe304971e231df14730c08e5add2e2b5aa62573ef5f5f53862a3ff0b27e88bc82f70a11fc127a
 EBUILD perl-Module-Pluggable-4.500.0.ebuild 530 SHA256 391ef97d8361b812afd9eabaefa4463283abed1aaa66d5a8456adb53269bfddd SHA512 f0fb6e360f8e53db014f85facbc4dc14b8ee13515d37cd20c93a1b60b50da98202f147a85545cdc1a843af52f8799ea5c134be51f91ca6dc397683ac4dc851e4 WHIRLPOOL 967487d521e3ac58c24251bd543680a466e9fc656fbfa3199e22a7b401fad4ec0de1cc0c9a01671972a821c56b276e2071e04951ee6b8cd91ce1d479ddda1e91
-EBUILD perl-Module-Pluggable-4.600.0.ebuild 530 SHA256 c27036774916022e23b3d49ade991cfae6e54c32387099ec20b0f13583d7ebc6 SHA512 abbdb06239af7ffdd7fceb26aabe02a84c585c87a20a9aa94278e821fd55a2ca14a2b615997599452cab40af0651c9fa6023aa6c173c7e8e34b1892274780a64 WHIRLPOOL f3f4c48451d1d6842276a2d7defe722dd1067705c45191fab462c95193feb63dd8e14c9c3c6e708e23e973a44b11e8927a53baf06d88c6b1197679ba095958b0
-MISC ChangeLog 4229 SHA256 b1b1808b9b36af430254141fd99ec113ac7f0a608e2947c622ba1a9e2b5dd8b8 SHA512 01bd2fa91520bb55d62a10fc0e406df059ed2b619aedfa43e22da7e0fa970eaf3452666e8ef4eb3ec2b8d488373d3dc92ec8f0a8d8255cb50db8bffac19d4753 WHIRLPOOL de9f10d6f4c039ead0b277997b8e946f659a727a88339fc5ea0b14425ab2ea8c294a402cac7de92a81295fd62a82429a7da2148ab09af2287f878704191a9536
+EBUILD perl-Module-Pluggable-4.600.0.ebuild 547 SHA256 2f73185288acfdf52b62407eb7603803d38ff0cb5d70ea8a2ac6fa4a20d3c8d3 SHA512 e9e7ef14cfd47e49c0a68551784e7bbe6dc6f97b05de31cc5080eb09c81c9d7207b5413fab4d1ccf06eefddfa62db998e2033c21bb7659508a5aa1f29a5b9107 WHIRLPOOL 46bc98a9d0780498f84066a1596bb572bddb4e1be5cb344ec8efdc137c7a597a12f129e9ae63b711e8fcd352301d56a4a43a4a12e64977d5135c4ac72e310117
+MISC ChangeLog 4464 SHA256 d32f41800136cdbdb9bccf177885171fcde9f662b8da5e27d0ab1a25744d7e35 SHA512 1538cdbf488d54e9eabcd918e235d169159c64edb6823a8c5fbdaa3b1452e301e6d4f3f8034873691aaf6e455c961a453164182222a976c80828b96033f70e67 WHIRLPOOL ea8402a19f9420ec7f738c5e44e0a6b85e86aadeec97fb9dd7af910d1c3efc8b78db1be71ffe2a3685c91f4436da8fc95085293dcb0471f8c14035af99443de0
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEFDZEACgkQV3J2n04EauycPgCfQlJjKN5kkKT/1lGwAk5j6c/7
-wuMAoIM7WEfaQGR89EFcmbNDqnXrgW80
-=O4Sx
+iQIcBAEBCAAGBQJRBmX5AAoJEDYO1FT4VRUU/JcP/2UJJSha3VCFpqP+8VeFATr6
+K2i0q2+dJ1Yuo8gFlcg87f8P/BLdQlLYrN5uYv3OFRKAvEhxcDOO8QKceg3u9Qds
+5V9Ih1Sst47r14Btga/WAlmYrpfmaeCsTW4SPcyMrtihEh3PvULlBFCCkJ2dKc+H
+QlXygEefKCbY3q3UDWkOVSmuwDn0DfImzRnQ6louNx4qmUYYo2fpr+xFrJLJWrdC
+eyMqB81tFVaTsy95hY6Sql+McWoVl2/aymidbQAh+FzfrrZ7SrIze692+eqQGKH7
+RJqbfa2fWRIT1KPOsS2Vq3n/4OJ3wm/weRdk02NRfaGq/xcKkWWYxG+dxJbDTKpP
+e+Jcq8Gd6zTtZVlTqCQ1ND5bcoCNRJekcdwGDak1VuLiZhc/4IGFTLA4h5Dy5yHo
+46wENrd20q0ei6M9Gemle+scYRw2xMjYbS+XrS2XuRyiVcWQvglQBV4kNWvg8rBP
+3ItFIjKuqq3Z8xepcUzcssHDU3PPDgtaI+HaMcTAAkl4g4FT0B4XQ9+zsynfMXZz
+VrsUeEj2JhG0NWQmyBpOc9ThhE4ZuMrkG97SCjWsRitD/y7Y7DzwjD2QHD1spQie
+VEos/++vrSRuB8bqJhbjP9DjZ44unSbmc+4FkGvifMtlKXOWm0GhnL5s19RJ0Ze7
+R886/Sg1zpY+94I24aBd
+=zmoG
 -----END PGP SIGNATURE-----
