@@ -1,6 +1,14 @@
 # ChangeLog for virtual/perl-Module-Pluggable
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Pluggable/ChangeLog,v 1.29 2013/01/27 11:20:48 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Pluggable/ChangeLog,v 1.31 2013/01/28 11:50:06 naota Exp $
+
+  28 Jan 2013; Naohiro Aota <naota@gentoo.org>
+  perl-Module-Pluggable-4.600.0.ebuild:
+  Add ~x86-fbsd wrt #454264
+
+  28 Jan 2013; Jeroen Roovers <jer@gentoo.org>
+  perl-Module-Pluggable-4.600.0.ebuild:
+  Marked ~hppa (bug #454264).
 
 *perl-Module-Pluggable-4.600.0 (27 Jan 2013)
 
