@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/Module-Pluggable
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Pluggable/ChangeLog,v 1.19 2013/01/27 11:20:29 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Pluggable/ChangeLog,v 1.21 2013/01/28 11:31:16 naota Exp $
+
+  28 Jan 2013; Naohiro Aota <naota@gentoo.org> Module-Pluggable-4.600.0.ebuild:
+  Add ~x86-fbsd wrt #454264
+
+  28 Jan 2013; Jeroen Roovers <jer@gentoo.org> Module-Pluggable-4.600.0.ebuild:
+  Marked ~hppa (bug #454264).
 
 *Module-Pluggable-4.600.0 (27 Jan 2013)
 
